_R_ 3; _W_ 11, 12: - fix to CSS that broke fixed-position items on iOS

--- a/public_html/_R_/common/3/scss/common.scss
+++ b/public_html/_R_/common/3/scss/common.scss
@@ -20,12 +20,6 @@ html, body {
 	font-size: medium;
 }
 
-@media (max-device-height: 640px) {
-	html {
-		@include min-height(416px);
-	}
-}
-
 body { position: relative; }
 
 header {
