--- a/public_html/_R_/ios/3/ios.css
+++ b/public_html/_R_/ios/3/ios.css
@@ -1,3 +1,9 @@
+@media (max-device-height: 640px) {
+	html {
+		min-height: 416px;
+	}
+}
+
 body {
 	font-family: Helvetica;
 	padding-bottom: 44px;
